logs/traders/trader_tr_1771023001488_20260214_174030.log
  File "C:\Users\colli\Downloads\#CodeBase\torra_trader.py", line 155
    clean = re.sub(r'\s*```
                   ^
SyntaxError: unterminated string literal (detected at line 155)
